add_library(core STATIC
	args.cpp
	args.h
	array.h
	arraystream.cpp
	arraystream.h
	bitstream.cpp
	bitstream.h
	common.cpp
	common.h
	core.h
	crc.cpp
	crc.h
	endian.cpp
	endian.h
	exception.cpp
	exception.h
	log.cpp
	log.h
	map.h
	memorystream.cpp
	memorystream.h
	name.cpp
	name.h
	names.h
	str.cpp
	str.h
	stream.cpp
	stream.h
	vector.h
	xml.cpp
	xml.h
	zone.cpp
	zone.h
)
