VCC=../../utils/bin/vcc$(EXEEXT)
OUTDIR=../../basev/doom1/progs
COMMON_PROGS_DIR=../../basev/common/progs

noinst_DATA = $(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat

$(OUTDIR)/shared.dat: $(VCC) $(srcdir)/*.vc $(COMMON_PROGS_DIR)/engine.dat
	@mkdir -p $(OUTDIR)
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/doomdefs.vc $@

$(OUTDIR)/svprogs.dat: $(VCC) $(srcdir)/*.vc $(srcdir)/game/*.vc $(srcdir)/game1/*.vc \
		$(OUTDIR)/shared.dat $(COMMON_PROGS_DIR)/linespec.dat
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/svprogs.vc $@

$(OUTDIR)/clprogs.dat: $(VCC) $(srcdir)/*.vc $(srcdir)/cgame/*.vc $(OUTDIR)/svprogs.dat
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/clprogs.vc $@

EXTRA_DIST = compile.bat \
	clprogs.vc \
	doomdefs.vc \
	svprogs.vc \
	cgame/MenuChoice_SpanDrawing.vc \
	cgame/MenuChoice_LoadGame.vc \
	cgame/MenuChoiceEpisode.vc \
	cgame/MenuChoice_MouseLook.vc \
	cgame/MenuScreenScreenResolution.vc \
	cgame/MenuChoice_InvertMouse.vc \
	cgame/MenuSelector_Skull.vc \
	cgame/MenuStaticAnim.vc \
	cgame/MenuChoice_JoinAt.vc \
	cgame/MenuScreenSList.vc \
	cgame/MenuChoice_MPEpisode.vc \
	cgame/MenuChoice_Models.vc \
	cgame/MenuChoice_CDMusic.vc \
	cgame/MenuChoice_Help.vc \
	cgame/MenuChoice_GoToConsole.vc \
	cgame/MenuChoice_NewNetGame.vc \
	cgame/MenuChoice_Options.vc \
	cgame/MenuScreen.vc \
	cgame/classes.vc \
	cgame/MenuChoice_MouseYSensitivity.vc \
	cgame/MenuObject.vc \
	cgame/MenuSelector_SmallRight.vc \
	cgame/MenuChoice_TimeLimit.vc \
	cgame/MenuScreenMultiplayer.vc \
	cgame/FinaleScreen.vc \
	cgame/MenuChoice_SkillEasy.vc \
	cgame/MenuChoice_SaveSlot.vc \
	cgame/MenuChoice_Windowed.vc \
	cgame/MenuChoice_SoundSettings.vc \
	cgame/MenuSelector_SmallLeft.vc \
	cgame/MenuChoice_Croshair.vc \
	cgame/MenuChoice_ClipLights.vc \
	cgame/MenuChoice_QuitGame.vc \
	cgame/MenuTitleText.vc \
	cgame/MenuChoice_PlayerSetup.vc \
	cgame/MenuChoice_DarkenLights.vc \
	cgame/MenuMainTitleImage.vc \
	cgame/MenuScreenJoinGame.vc \
	cgame/MenuChoice_LoadSlot.vc \
	cgame/MenuScreenOptions.vc \
	cgame/MenuChoice_VideoOptions.vc \
	cgame/MenuChoice_Controls2.vc \
	cgame/MenuScreenControls.vc \
	cgame/MenuScreenSoundOptions.vc \
	cgame/MenuChoice_SwapStereo.vc \
	cgame/MenuChoice_PlayerName.vc \
	cgame/MenuInputLine.vc \
	cgame/MenuChoice_ScreenResolution.vc \
	cgame/MenuChoice_DynamicLights.vc \
	cgame/MenuSpriteAnim.vc \
	cgame/MenuChoice_DeathMatch.vc \
	cgame/MenuChoice_SkillNightmare.vc \
	cgame/MenuScreenPlayerSetup.vc \
	cgame/MenuChoice_MPLevel.vc \
	cgame/ClientGame.vc \
	cgame/MenuChoice_Monsters.vc \
	cgame/MenuChoice_GLSpecular.vc \
	cgame/MenuStaticBitmap.vc \
	cgame/MenuChoice_MPSkill.vc \
	cgame/MenuHelpPage.vc \
	cgame/MenuScreenControls2.vc \
	cgame/MenuChoice_SkillBaby.vc \
	cgame/MenuChoice_GLBlendSprites.vc \
	cgame/MenuScreenSaveGame.vc \
	cgame/MenuChoice_Players.vc \
	cgame/MenuChoiceSlider.vc \
	cgame/TitleScreen.vc \
	cgame/MenuScreenSinglePlayer.vc \
	cgame/MenuChoice_NewGame.vc \
	cgame/MenuSaveSlot.vc \
	cgame/MenuModel.vc \
	cgame/MenuScreenMouseOptions.vc \
	cgame/MenuChoice_Lookspring.vc \
	cgame/MenuChoice_StartGame.vc \
	cgame/MenuBigTextButton.vc \
	cgame/MenuChoice_JoinGame.vc \
	cgame/MenuSList.vc \
	cgame/MenuChoice_D3DBlendSprites.vc \
	cgame/MenuChoice_MouseXSensitivity.vc \
	cgame/MenuChoice_ApplyVidMode.vc \
	cgame/MenuScreenLoadGame.vc \
	cgame/MenuSmallTextButton.vc \
	cgame/MenuChoice_Controls.vc \
	cgame/MenuChoice_BitDepth.vc \
	cgame/MenuChoice_Skin.vc \
	cgame/MenuScreenSkill.vc \
	cgame/MenuChoice_Search.vc \
	cgame/MenuChoiceEnum.vc \
	cgame/MenuChoice_OnOff.vc \
	cgame/MenuChoice_Brightness.vc \
	cgame/MenuChoice_ExtraSamples.vc \
	cgame/MenuChoice_LookStrafe.vc \
	cgame/MenuChoice_AddLights.vc \
	cgame/StatusBarScreen.vc \
	cgame/MenuChoice_ScreenSize.vc \
	cgame/MenuScreenMain.vc \
	cgame/MenuChoice_VideoMode.vc \
	cgame/MenuChoice_SkillHard.vc \
	cgame/MenuScreenEpisode.vc \
	cgame/MenuScreenHelp.vc \
	cgame/MenuControlKey.vc \
	cgame/MenuChoice.vc \
	cgame/MenuChoice_SoundVolume.vc \
	cgame/MenuScreenNewNetGame.vc \
	cgame/IntermissionScreen.vc \
	cgame/MenuChoice_Colour.vc \
	cgame/MenuChoice_SkillNormal.vc \
	cgame/MenuChoice_SaveGame.vc \
	cgame/MenuChoice_SinglePlayer.vc \
	cgame/MenuChoice_EndGame.vc \
	cgame/MenuChoice_Darkening.vc \
	cgame/MenuChoice_MouseOptions.vc \
	cgame/MenuTextButton.vc \
	cgame/MenuChoice_Multiplayer.vc \
	cgame/MenuChoice_MusicVolume.vc \
	cgame/MenuScreenVideoOptions.vc \
	cgame/MenuChoice_ColouredLights.vc \
	cgame/MenuChoice_D3DTextureFilter.vc \
	cgame/MenuChoice_SpriteOffset.vc \
	cgame/MenuChoice_GLTextureFilter.vc \
	cgame/MenuChoice_SpriteDelta.vc \
	cgame/MenuChoice_GLModelLights.vc \
	cgame/MenuChoice_ViewModels.vc \
	cgame/MenuChoice_CroshairTrans.vc \
	cgame/MenuScreenAdvancedVideoOptions.vc \
	cgame/MenuChoice_SpecularLevel.vc \
	cgame/MenuChoice_D3DDither.vc \
	cgame/MenuChoice_AdvancedVideoOptions.vc \
	cgame/MenuChoice_AspectRatio.vc \
	cgame/MenuChoice_D3DSpecular.vc \
	cgame/MenuChoice_HiResTextures.vc \
	cgame/MenuChoice_ExternalMusic.vc \
	cgame/MenuChoice_DrawFPS.vc \
	cgame/MenuChoice_D3DModelLights.vc \
	game/SecurityCamera.vc \
	game/PointPuller.vc \
	game/PointPusher.vc \
	game/LavaSmoke.vc \
	game/Actor.vc \
	game/DoomLevelInfo.vc \
	game/LavaSplash.vc \
	game/MainGameInfo.vc \
	game/Player.vc \
	game/SludgeChunk.vc \
	game/SludgeSplash.vc \
	game/WaterSplash.vc \
	game/WaterSplashBase.vc \
	game/BloodSplash.vc \
	game/Weapon.vc \
	game/StaticRGBLightSource.vc \
	game/MapSpotGravity.vc \
	game/BloodSplashBase.vc \
	game/SlimeChunk.vc \
	game/SlimeSplash.vc \
	game/SoundSequenceSlot.vc \
	game/StaticLightSource.vc \
	game/DoomWorldInfo.vc \
	game/MapSpot.vc \
	game/classes.vc \
	game/BotPlayer.vc \
	game/QuakeFocus.vc \
	game/SoundSequence.vc \
	game1/ItemBackpack.vc \
	game1/WeaponBFG.vc \
	game1/SmallPool.vc \
	game1/Puff.vc \
	game1/ItemWeaponPlasmaGun.vc \
	game1/Meat4NoBlock.vc \
	game1/ItemAmmoShells.vc \
	game1/ItemWeaponBFG.vc \
	game1/TeleportFog.vc \
	game1/ColumnGreenTall.vc \
	game1/HeadCandles.vc \
	game1/ItemAmmoCells.vc \
	game1/TechLamp.vc \
	game1/DeadLostSoul.vc \
	game1/ItemMedikit.vc \
	game1/ItemSoulSphere.vc \
	game1/TorchRed.vc \
	game1/HangingTorsoNoBrain.vc \
	game1/WeaponMissile.vc \
	game1/ItemArmor1.vc \
	game1/WeaponPistol.vc \
	game1/ItemAmmoRocketBox.vc \
	game1/ItemHealthBonus.vc \
	game1/LiveStick.vc \
	game1/HeadOnAStick.vc \
	game1/classes.vc \
	game1/TorchGreen.vc \
	game1/TorchBlueShort.vc \
	game1/AmmoPickup.vc \
	game1/Grenade.vc \
	game1/BloodyTwitch.vc \
	game1/Barrel.vc \
	game1/Meat4.vc \
	game1/HangingNoBrain.vc \
	game1/ShotgunGuy.vc \
	game1/PowerupPickup.vc \
	game1/WeaponFist.vc \
	game1/WeaponGrenade.vc \
	game1/HangingTorsoLookDown.vc \
	game1/Meat5NoBlock.vc \
	game1/DeadImp.vc \
	game1/Blood.vc \
	game1/ItemWeaponChainsaw.vc \
	game1/ItemRespawnFog.vc \
	game1/DeadShotgunGuy.vc \
	game1/BaronOfHell.vc \
	game1/BFGShot.vc \
	game1/ItemKeyYellowCard.vc \
	game1/Demon.vc \
	game1/CacodemonMissile.vc \
	game1/ColumnLamp.vc \
	game1/Shadows.vc \
	game1/ItemInfrared.vc \
	game1/DoomPlayer.vc \
	game1/TeleportSpot2.vc \
	game1/ColonGibs.vc \
	game1/ItemWeaponChaingun.vc \
	game1/TorchGreenShort.vc \
	game1/ItemWeaponShotgun.vc \
	game1/ItemKeyYellowSkull.vc \
	game1/ColumnWithHearth.vc \
	game1/TechPillar.vc \
	game1/Cyberdemon.vc \
	game1/WeaponPlasma.vc \
	game1/ItemStimPack.vc \
	game1/ItemKeyBlueSkull.vc \
	game1/DeadStick.vc \
	game1/ItemAmmoShellsBox.vc \
	game1/BurnedTree.vc \
	game1/ColumnRedTall.vc \
	game1/Meat2.vc \
	game1/ItemWeaponRocketLauncher.vc \
	game1/ColumnRedShort.vc \
	game1/BruiserShot.vc \
	game1/PlasmaShot.vc \
	game1/ItemInvisibility.vc \
	game1/HeadsOnStick.vc \
	game1/Meat2NoBlock.vc \
	game1/ItemArmor2.vc \
	game1/Zombieman.vc \
	game1/LostSoul.vc \
	game1/CandleStick.vc \
	game1/BrainStem.vc \
	game1/Imp.vc \
	game1/TorchRedShort.vc \
	game1/BurningBarrel.vc \
	game1/DeadDemon.vc \
	game1/Meat5.vc \
	game1/ItemKeyRedCard.vc \
	game1/ImpMissile.vc \
	game1/FloatingSkull.vc \
	game1/HealthPickup.vc \
	game1/TorchBlue.vc \
	game1/Cacodemon.vc \
	game1/ItemRadiationSuit.vc \
	game1/ArmorPickup.vc \
	game1/ItemKeyBlueCard.vc \
	game1/Stalagtite.vc \
	game1/ExtraBFG.vc \
	game1/ItemAmmoBulletClip.vc \
	game1/SpiderMastermind.vc \
	game1/HangingNoGuts.vc \
	game1/ItemKeyRedSkull.vc \
	game1/TechLamp2.vc \
	game1/Meat3NoBlock.vc \
	game1/Gibs.vc \
	game1/TeleportSpot3.vc \
	game1/HangingTorsoLookUp.vc \
	game1/ItemAmmoBulletBox.vc \
	game1/ItemAmmoCellsPack.vc \
	game1/ItemInvulnerability.vc \
	game1/ColumnGreenShort.vc \
	game1/DeadPlayerGibs2.vc \
	game1/DeadZombieman.vc \
	game1/WeaponChainsaw.vc \
	game1/WeaponShotgun.vc \
	game1/TeleportSpot.vc \
	game1/KeyPickup.vc \
	game1/BigTree.vc \
	game1/Meat3.vc \
	game1/ItemComputerMap.vc \
	game1/DeadPlayer.vc \
	game1/HangingTorsoSkull.vc \
	game1/ItemBerserk.vc \
	game1/Candelabra.vc \
	game1/BloodyTwitchNoBlock.vc \
	game1/DeadPlayerGibs.vc \
	game1/ItemAmmoRocket.vc \
	game1/ItemWeaponGrenadeLauncher.vc \
	game1/WeaponPickup.vc \
	game1/Rocket.vc \
	game1/EvilEye.vc \
	game1/DoomUnusedStates.vc \
	game1/ColumnWithSkull.vc \
	game1/WeaponChaingun.vc \
	game1/ItemArmorBonus.vc \
	game1/DeadCacodemon.vc \
	game2/ArachnotronPlasma.vc \
	game2/CommanderKeen.vc \
	game2/BossEye.vc \
	game2/BossTarget.vc \
	game2/Mancubus.vc \
	game2/PainElemental.vc \
	game2/WolfSS.vc \
	game2/RevenantTracer.vc \
	game2/Arachnotron.vc \
	game2/ChaingunGuy.vc \
	game2/WeaponSuperShotgun.vc \
	game2/BossBrain.vc \
	game2/Revenant.vc \
	game2/ItemWeaponSuperShotgun.vc \
	game2/RevenantTracerSmoke.vc \
	game2/SpawnShot.vc \
	game2/HellKnight.vc \
	game2/ArchVile.vc \
	game2/classes.vc \
	game2/SpawnFire.vc \
	game2/ItemMegaSphere.vc \
	game2/MancubusMissile.vc \
	game2/ArchvileFire.vc
