VCC=../../utils/bin/vcc$(EXEEXT)
OUTDIR=../../basev/heretic/progs
COMMON_PROGS_DIR=../../basev/common/progs

noinst_DATA = $(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat

$(OUTDIR)/shared.dat: $(VCC) $(srcdir)/*.vc $(COMMON_PROGS_DIR)/engine.dat
	@mkdir -p $(OUTDIR)
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/herdefs.vc $@

$(OUTDIR)/svprogs.dat: $(VCC) $(OUTDIR)/shared.dat $(srcdir)/*.vc $(srcdir)/game/*.vc \
		$(COMMON_PROGS_DIR)/linespec.dat
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/svprogs.vc $@

$(OUTDIR)/clprogs.dat: $(VCC) $(OUTDIR)/svprogs.dat $(srcdir)/*.vc $(srcdir)/cgame/*.vc
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/clprogs.vc $@

EXTRA_DIST = compile.bat \
	clprogs.vc \
	herdefs.vc \
	svprogs.vc \
	cgame/MenuChoice_SpanDrawing.vc \
	cgame/MenuChoice_LoadGame.vc \
	cgame/MenuChoice_Episode4.vc \
	cgame/MenuChoice_MouseLook.vc \
	cgame/MenuScreenScreenResolution.vc \
	cgame/MenuChoice_InvertMouse.vc \
	cgame/MenuStaticAnim.vc \
	cgame/MenuChoice_JoinAt.vc \
	cgame/MenuScreenSList.vc \
	cgame/MenuChoice_MPEpisode.vc \
	cgame/MenuChoice_Models.vc \
	cgame/MenuSpinningSkull.vc \
	cgame/MenuChoice_CDMusic.vc \
	cgame/MenuChoice_Help.vc \
	cgame/MenuChoice_GoToConsole.vc \
	cgame/MenuChoice_NewNetGame.vc \
	cgame/MenuChoice_Options.vc \
	cgame/MenuScreen.vc \
	cgame/classes.vc \
	cgame/MenuChoice_MouseYSensitivity.vc \
	cgame/MenuObject.vc \
	cgame/MenuSelector_SmallRight.vc \
	cgame/MenuChoice_TimeLimit.vc \
	cgame/MenuScreenMultiplayer.vc \
	cgame/FinaleScreen.vc \
	cgame/MenuChoice_SaveSlot.vc \
	cgame/MenuChoice_Windowed.vc \
	cgame/MenuChoice_SoundSettings.vc \
	cgame/MenuSelector_SmallLeft.vc \
	cgame/MenuChoice_Croshair.vc \
	cgame/MenuChoice_Episode3.vc \
	cgame/MenuChoice_QuitGame.vc \
	cgame/MenuTitleText.vc \
	cgame/MenuChoice_PlayerSetup.vc \
	cgame/MenuChoice_DarkenLights.vc \
	cgame/MenuMainTitleImage.vc \
	cgame/MenuScreenJoinGame.vc \
	cgame/MenuChoice_LoadSlot.vc \
	cgame/MenuScreenOptions.vc \
	cgame/MenuChoice_VideoOptions.vc \
	cgame/MenuChoice_Controls2.vc \
	cgame/MenuScreenControls.vc \
	cgame/MenuScreenSoundOptions.vc \
	cgame/MenuChoice_SwapStereo.vc \
	cgame/MenuChoice_PlayerName.vc \
	cgame/MenuInputLine.vc \
	cgame/MenuChoice_ScreenResolution.vc \
	cgame/MenuChoice_DynamicLights.vc \
	cgame/MenuSpriteAnim.vc \
	cgame/MenuChoice_DeathMatch.vc \
	cgame/MenuChoice_GLBlendSprites.vc \
	cgame/MenuScreenPlayerSetup.vc \
	cgame/MenuChoice_Level.vc \
	cgame/MenuSpinningSkull2.vc \
	cgame/ClientGame.vc \
	cgame/MenuChoice_Monsters.vc \
	cgame/MenuChoice_Episode2.vc \
	cgame/MenuStaticBitmap.vc \
	cgame/MenuChoice_MPSkill.vc \
	cgame/MenuHelpPage.vc \
	cgame/MenuScreenControls2.vc \
	cgame/MenuChoice_Skill.vc \
	cgame/MenuScreenSaveGame.vc \
	cgame/MenuChoice_Players.vc \
	cgame/MenuChoiceSlider.vc \
	cgame/TitleScreen.vc \
	cgame/MenuScreenSinglePlayer.vc \
	cgame/MenuChoice_NewGame.vc \
	cgame/MenuBigTextButton.vc \
	cgame/MenuSaveSlot.vc \
	cgame/MenuScreenMouseOptions.vc \
	cgame/MenuChoice_Lookspring.vc \
	cgame/MenuChoice_StartGame.vc \
	cgame/MenuChoice_JoinGame.vc \
	cgame/MenuSList.vc \
	cgame/MenuChoice_D3DBlendSprites.vc \
	cgame/MenuChoice_MouseXSensitivity.vc \
	cgame/MenuChoice_ApplyVidMode.vc \
	cgame/MenuScreenLoadGame.vc \
	cgame/MenuSmallTextButton.vc \
	cgame/MenuSelector_BigArrow.vc \
	cgame/MenuChoice_Controls.vc \
	cgame/MenuChoice_BitDepth.vc \
	cgame/MenuScreenSkill.vc \
	cgame/MenuChoice_Search.vc \
	cgame/MenuChoiceEnum.vc \
	cgame/MenuChoice_OnOff.vc \
	cgame/MenuChoice_Brightness.vc \
	cgame/MenuChoice_ExtraSamples.vc \
	cgame/MenuChoice_LookStrafe.vc \
	cgame/MenuChoice_Episode1.vc \
	cgame/StatusBarScreen.vc \
	cgame/MenuChoice_ScreenSize.vc \
	cgame/MenuScreenMain.vc \
	cgame/MenuChoice_VideoMode.vc \
	cgame/MenuChoice_Episode5.vc \
	cgame/MenuScreenEpisode.vc \
	cgame/MenuScreenHelp.vc \
	cgame/MenuControlKey.vc \
	cgame/MenuChoice.vc \
	cgame/MenuChoice_SoundVolume.vc \
	cgame/MenuScreenNewNetGame.vc \
	cgame/IntermissionScreen.vc \
	cgame/MenuChoice_SinglePlayer.vc \
	cgame/MenuChoice_SaveGame.vc \
	cgame/MenuChoice_MouseOptions.vc \
	cgame/MenuChoice_EndGame.vc \
	cgame/MenuChoice_Darkening.vc \
	cgame/MenuChoice_Colour.vc \
	cgame/MenuTextButton.vc \
	cgame/MenuChoice_D3DTextureFilter.vc \
	cgame/MenuChoice_Multiplayer.vc \
	cgame/MenuChoice_MusicVolume.vc \
	cgame/MenuScreenVideoOptions.vc \
	cgame/MenuChoice_ColouredLights.vc \
	cgame/MenuChoice_ClipLights.vc \
	cgame/MenuChoice_SpriteOffset.vc \
	cgame/MenuChoice_SpriteDelta.vc \
	cgame/MenuChoice_GLSpecular.vc \
	cgame/MenuChoice_AddLights.vc \
	cgame/MenuChoice_GLTextureFilter.vc \
	cgame/MenuChoice_GLModelLights.vc \
	cgame/MenuChoice_ViewModels.vc \
	cgame/MenuChoice_CroshairTrans.vc \
	cgame/MenuScreenAdvancedVideoOptions.vc \
	cgame/MenuChoice_SpecularLevel.vc \
	cgame/MenuChoice_D3DDither.vc \
	cgame/MenuChoice_AdvancedVideoOptions.vc \
	cgame/MenuChoice_AspectRatio.vc \
	cgame/MenuChoice_D3DSpecular.vc \
	cgame/MenuChoice_HiResTextures.vc \
	cgame/MenuChoice_ExternalMusic.vc \
	cgame/MenuChoice_DrawFPS.vc \
	cgame/MenuChoice_D3DModelLights.vc \
	\
	game/ActivatedTimeBomb.vc \
	game/AmbientSoundSequence.vc \
	game/ArtiEgg.vc \
	game/ArtiFly.vc \
	game/ArtiHealth.vc \
	game/ArtiInvisibility.vc \
	game/ArtiInvulnerability.vc \
	game/ArtiSuperHealth.vc \
	game/ArtiTeleport.vc \
	game/ArtiTimeBomb.vc \
	game/ArtiTomeOfPower.vc \
	game/ArtiTorch.vc \
	game/BagOfHolding.vc \
	game/Beak.vc \
	game/BeakPowered.vc \
	game/Blaster.vc \
	game/BlasterAmmo.vc \
	game/BlasterHefty.vc \
	game/BlasterPowered.vc \
	game/Crossbow.vc \
	game/CrossbowAmmo.vc \
	game/CrossbowHefty.vc \
	game/CrossbowPowered.vc \
	game/CrystalVial.vc \
	game/EggFX.vc \
	game/EnchantedShield.vc \
	game/Gauntlets.vc \
	game/GauntletsPowered.vc \
	game/GoldWand.vc \
	game/GoldWandAmmo.vc \
	game/GoldWandFX1.vc \
	game/GoldWandFX2.vc \
	game/GoldWandHefty.vc \
	game/GoldWandPowered.vc \
	game/GoldWandPuff1.vc \
	game/GoldWandPuff2.vc \
	game/HeadFX1.vc \
	game/HeadFX2.vc \
	game/HeadFX3.vc \
	game/HereticImp.vc \
	game/HereticImpBall.vc \
	game/HereticImpChunk1.vc \
	game/HereticImpChunk2.vc \
	game/HereticImpLeader.vc \
	game/HereticSoundSequence1.vc \
	game/HereticSoundSequence2.vc \
	game/HereticSoundSequence3.vc \
	game/HereticSoundSequence4.vc \
	game/HereticSoundSequence5.vc \
	game/HereticSoundSequence6.vc \
	game/HereticSoundSequence7.vc \
	game/HereticSoundSequence8.vc \
	game/HereticSoundSequence9.vc \
	game/HereticSoundSequence10.vc \
	game/HereticWeapon.vc \
	game/HornRodFX1.vc \
	game/HornRodFX2.vc \
	game/Ironlich.vc \
	game/KeyBlue.vc \
	game/KeyGizmoFloatBlue.vc \
	game/KeyGizmoFloatGreen.vc \
	game/KeyGizmoFloatYellow.vc \
	game/KeyGreen.vc \
	game/KeyYellow.vc \
	game/Mace.vc \
	game/MaceAmmo.vc \
	game/MaceHefty.vc \
	game/MacePowered.vc \
	game/MaceSpawner.vc \
	game/Minotaur.vc \
	game/MinotaurFX1.vc \
	game/MinotaurFX2.vc \
	game/MinotaurFX3.vc \
	game/MummyFX1.vc \
	game/PhoenixRod.vc \
	game/PhoenixRodAmmo.vc \
	game/PhoenixRodHefty.vc \
	game/PhoenixRodPowered.vc \
	game/RainPillar.vc \
	game/RainPlayer2.vc \
	game/RainPlayer3.vc \
	game/RainPlayer4.vc \
	game/RedAxe.vc \
	game/SilverShield.vc \
	game/SkullRod.vc \
	game/SkullRodAmmo.vc \
	game/SkullRodHefty.vc \
	game/SkullRodPowered.vc \
	game/SnakeProjA.vc \
	game/SnakeProjB.vc \
	game/Sorcerer1.vc \
	game/Sorcerer2.vc \
	game/Sorcerer2FX1.vc \
	game/Sorcerer2FX2.vc \
	game/Sorcerer2FXSpark.vc \
	game/Sorcerer2Telefade.vc \
	game/SorcererFX1.vc \
	game/SoundSequence.vc \
	game/SoundSequenceSlot.vc \
	game/Staff.vc \
	game/StaffPowered.vc \
	game/SuperMap.vc \
	game/TeleGlitter1.vc \
	game/TeleGlitter2.vc \
	game/TeleGlitterGenerator1.vc \
	game/TeleGlitterGenerator2.vc \
	game/TeleportDest.vc \
	game/TeleportDest2.vc \
	game/TeleportDest3.vc \
	game/TeleportFog.vc \
	game/Whirlwind.vc \
	game/WizardFX1.vc \
	\
	game/BlasterFX1.vc \
	game/VolcanoTBlast.vc \
	game/BloodSplatter.vc \
	game/SerpentTorch.vc \
	game/Actor.vc \
	game/KnightAxe.vc \
	game/Chicken.vc \
	game/Decoration.vc \
	game/MaceFX2.vc \
	game/PodGoo.vc \
	game/Pawn.vc \
	game/MainGameInfo.vc \
	game/SkullHang35.vc \
	game/StaticLightSource.vc \
	game/Barrel.vc \
	game/StalagmiteLarge.vc \
	game/MummyGhost.vc \
	game/BurnBallFB.vc \
	game/SludgeChunk.vc \
	game/MummyLeaderGhost.vc \
	game/HangingCorpse.vc \
	game/HereticLevelInfo.vc \
	game/Key.vc \
	game/KnightGhost.vc \
	game/Puffy.vc \
	game/classes.vc \
	game/SkullHang70.vc \
	game/HereticPlayer.vc \
	game/Projectile.vc \
	game/Wizard.vc \
	game/QuakeFocus.vc \
	game/StaffPuff2.vc \
	game/Beast.vc \
	game/MummySoul.vc \
	game/SoundWind.vc \
	game/CrossbowFX3.vc \
	game/PlayerPawn.vc \
	game/Blood.vc \
	game/GauntletPuff1.vc \
	game/BloodSplash.vc \
	game/SoundWaterfall.vc \
	game/PhoenixFX1.vc \
	game/PodGenerator.vc \
	game/LavaSplash.vc \
	game/Clink.vc \
	game/SludgeSplash.vc \
	game/BlasterPuff2.vc \
	game/BurnBall.vc \
	game/Snake.vc \
	game/BloodySkull.vc \
	game/FireBrazier.vc \
	game/BeastBall.vc \
	game/StalactiteSmall.vc \
	game/BlasterPuff1.vc \
	game/MummyLeader.vc \
	game/ChickenPlayer.vc \
	game/LavaSmoke.vc \
	game/Pod.vc \
	game/BeakPuff.vc \
	game/Moss1.vc \
	game/MaceFX3.vc \
	game/VolcanoBlast.vc \
	game/BlasterSmoke.vc \
	game/Effect.vc \
	game/BrownPillar.vc \
	game/Mummy.vc \
	game/Chandelier.vc \
	game/CrossbowFX1.vc \
	game/KeyGizmoBlue.vc \
	game/MapSpotGravity.vc \
	game/CrossbowFX4.vc \
	game/SmallPillar.vc \
	game/Feather.vc \
	game/GauntletPuff2.vc \
	game/PointPusher.vc \
	game/Knight.vc \
	game/SkullHang45.vc \
	game/Moss2.vc \
	game/StaticRGBLightSource.vc \
	game/MaceFX1.vc \
	game/StaffPuff.vc \
	game/PhoenixFX2.vc \
	game/PhoenixPuff.vc \
	game/SkullHang60.vc \
	game/WallTorch.vc \
	game/StalactiteLarge.vc \
	game/MaceFX4.vc \
	game/BossSpot.vc \
	game/PointPuller.vc \
	game/StalagmiteSmall.vc \
	game/MapSpot.vc \
	game/WaterSplashBase.vc \
	game/KeyGizmoYellow.vc \
	game/Ripper.vc \
	game/Player.vc \
	game/Volcano.vc \
	game/WaterSplash.vc \
	game/BloodSplashBase.vc \
	game/SlimeChunk.vc \
	game/KeyGizmoGreen.vc \
	game/SlimeSplash.vc \
	game/CrossbowFX2.vc \
	game/HereticWorldInfo.vc \
	game/BotPlayer.vc

MOSTLYCLEANFILES = \
	$(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat \
	$(OUTDIR)/shared.txt $(OUTDIR)/svprogs.txt $(OUTDIR)/clprogs.txt
